--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.4.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
