--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
