--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "autoprefixer": "^10.4.21",
+    "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,22 +49,24 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "postcss": "^8.5.3",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss": "^4.0.14",
+    "tailwindcss": "^4.0.14"
   }
 }
