--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.3",
     "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
