--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "replicate": "^1.0.1",
