--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.4.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
@@ -57,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
+    "react-media-recorder": "^1.7.1",
     "react-resizable-panels": "^2.1.7",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^11.0.5",
